# internal/app/rest_api_v2/docs/swagger.yaml
@@ -188,10 +188,8 @@ definitions:
         type: array
       encrypted:
         type: boolean
-      include_hostwide_ssh_keys:
+      include_host_ssh_keys:
         type: boolean
-      live_status:
-        type: string
       loader:
         type: string
       memory:
@@ -215,6 +213,7 @@ definitions:
           type: string
         type: array
       production:
+        description: LiveStatus         string      `json:"live_status"`
         type: boolean
       running:
         type: boolean
